# raytracer-mirror

./: .clang-format  .clang-tidy  .gitignore  AABB_8hpp.html  AABB_8hpp.js  AABB_8hpp__dep__incl.map  AABB_8hpp__dep__incl.md5  AABB_8hpp__incl.map  AABB_8hpp__incl.md5  AABB_8hpp_source.html  ARayMarchedShape_8cpp.html  ARayMarchedShape_8cpp__incl.map  ARayMarchedShape_8cpp__incl.md5  ARayMarchedShape_8hpp.html  ARayMarchedShape_8hpp.js  ARayMarchedShape_8hpp__dep__incl.map  ARayMarchedShape_8hpp__dep__incl.md5  ARayMarchedShape_8hpp__incl.map  ARayMarchedShape_8hpp__incl.md5  ARayMarchedShape_8hpp_source.html  AShape_8cpp.html  AShape_8cpp__incl.map  AShape_8cpp__incl.md5  AShape_8hpp.html  AShape_8hpp.js  AShape_8hpp__dep__incl.map  AShape_8hpp__dep__incl.md5  AShape_8hpp__incl.map  AShape_8hpp__incl.md5  AShape_8hpp_source.html  App_8cpp.html  App_8cpp__incl.map  App_8cpp__incl.md5  App_8hpp.html  App_8hpp.js  App_8hpp__dep__incl.map  App_8hpp__dep__incl.md5  App_8hpp__incl.map  App_8hpp__incl.md5  App_8hpp_source.html  (+1637 more)
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  docs.yml  lint.yml  sync.yml
docs/: architecture-refactor-iboundable.md
docs/protocol/: protocol.md
scenes/: COLLISION_ERROR.txt  adaptive_ssaa.txt  ambient_occlusion.txt  background.txt  baseball.txt  basic.txt  benchmark_bvh.txt  bird.txt  boxes.txt  cat_mesh.txt  cat_subscene.txt  chessboard.txt  colored_shadows.txt  cone.txt  corbeille.txt  coussin.txt  cube_grid.txt  cube_mesh.txt  cylinder.txt  double_subscene.txt  drapeau.txt  earth.txt  funny.txt  gallery.txt  gallery_no_lights.txt  glass_cone.txt  glass_cylinder.txt  glass_sphere.txt  gustave.txt  hourglass.txt  inf_cone.txt  julia_set_3d.txt  light_colors.txt  limited_cone.txt  limited_cones.txt  limited_cylinders.txt  limited_hourglass.txt  menger_showcase.txt  menger_sponge.txt  mirror_sphere.txt  (+25 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+89 more)
src/: main.cpp
src/DataTypes/: Camera.hpp  HitRecord.hpp  Ray.hpp  RenderStats.hpp  RendererConfig.hpp  Scene.hpp  Vec3.hpp  World.hpp
src/Interfaces/: IBoundable.hpp  ILight.hpp  IMaterial.hpp  IShape.hpp
src/Math/: AABB.hpp  BVHNode.hpp  Constants.hpp  CubicSolver.hpp  Matrix4x4.cpp  Matrix4x4.hpp  QuadraticSolver.cpp  QuadraticSolver.hpp  QuarticSolver.hpp
src/cluster/: ClusterLogger.cpp  ClusterLogger.hpp  Coordinator.cpp  Coordinator.hpp  Worker.cpp  Worker.hpp
src/core/: ARayMarchedShape.cpp  ARayMarchedShape.hpp  AShape.cpp  AShape.hpp  Core.cpp  Core.hpp  Image.cpp  Image.hpp  Logger.cpp  Logger.hpp  PluginLoader.cpp  PluginLoader.hpp  PluginManager.cpp  PluginManager.hpp  ProgressBar.cpp  ProgressBar.hpp  RenderSampler.cpp  RenderSampler.hpp
src/factories/: LightFactory.cpp  LightFactory.hpp  MaterialFactory.cpp  MaterialFactory.hpp  ShapeFactory.cpp  ShapeFactory.hpp
src/network/: Message.cpp  Message.hpp  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp  TcpSocket.cpp  TcpSocket.hpp
src/parsers/: ObjParser.cpp  ObjParser.hpp  SceneParser.cpp  SceneParser.hpp
src/plugins/: PluginMetadata.hpp
src/plugins/Lights/: DirectionalLight.cpp  DirectionalLight.hpp  PointLight.cpp  PointLight.hpp
src/plugins/Materials/: Chessboard.cpp  Chessboard.hpp  ColoredDiffuse.cpp  ColoredDiffuse.hpp  ImageTexture.cpp  ImageTexture.hpp  Lambertian.cpp  Lambertian.hpp  NormalMapped.cpp  NormalMapped.hpp  PerlinNoise.cpp  PerlinNoise.hpp  Phong.cpp  Phong.hpp  Reflective.cpp  Reflective.hpp  Refractive.cpp  Refractive.hpp  Transparent.cpp  Transparent.hpp
src/plugins/Shapes/: Box.cpp  Box.hpp  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  Hourglass.cpp  Hourglass.hpp  JuliaSet3D.cpp  JuliaSet3D.hpp  LimitedCone.cpp  LimitedCone.hpp  LimitedCylinder.cpp  LimitedCylinder.hpp  LimitedHourglass.cpp  LimitedHourglass.hpp  MengerSponge.cpp  MengerSponge.hpp  Mesh.cpp  Mesh.hpp  MeshTriangle.cpp  MeshTriangle.hpp  MobiusStrip.cpp  MobiusStrip.hpp  Plane.cpp  Plane.hpp  Rectangle.cpp  Rectangle.hpp  Sphere.cpp  Sphere.hpp  Tanglecube.cpp  Tanglecube.hpp  Torus.cpp  Torus.hpp  Triangle.cpp  Triangle.hpp  TrianglePlugin.cpp
src/ui/: FreeRoamController.cpp  FreeRoamController.hpp  PixelBuffer.cpp  PixelBuffer.hpp  RenderPanel.cpp  RenderPanel.hpp  SFMLHelpers.hpp  SceneBrowser.cpp  SceneBrowser.hpp  ToastManager.cpp  ToastManager.hpp  UIApp.cpp  UIApp.hpp
src/utils/: ConfigUtils.hpp  HelpDisplay.cpp  HelpDisplay.hpp
src/watcher/: FileWatcher.cpp  FileWatcher.hpp
src/watcher/InotifyWrapper/: InotifyEvent.hpp  InotifyEventReader.cpp  InotifyEventReader.hpp  InotifyExeception.hpp  InotifyInstance.hpp  InotifyWatch.hpp
tests/: placeholder.cpp  test_cubic_solver.cpp  test_filewatcher.cpp  test_obj_parser.cpp  test_quartic_solver.cpp
textures/: convert_images.sh
tools/: animate.sh  animate_solar_slow.sh  generate_help.cpp  obj_info.sh
